Implementação da regra dos botões Limpar e Calcular.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">AppGasEta</string>
     <string name="gasolina_x_etanol">Gasolina X Etanol</string>
     <string name="hint_gasolina">R$ Gasolina?</string>
-    <string name="hint_alcool">R$ Alcool</string>
+    <string name="hint_etanol">R$ Etanol</string>
     <string name="calcular">Calcular</string>
     <string name="resultado">RESULTADO</string>
     <string name="limpar">LIMPAR</string>
